tests/codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.data.lowercase.type.name/reader-data-lowercase-type-name.mon
;; TEST-ID: tests.codegen.reader-error.reader-data-lowercase-type-name
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/typeclass-data-layout
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: data type name 'maybe' must start with an uppercase letter
;; TEST-ATOM: atom.reader.error.reader.data.lowercase.type.name
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.data.lowercase.type.name
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: data type name 'maybe' must start with an uppercase letter
;; TEST-READER-PATH: reader.c:1 parser.data
;; TEST-CODEGEN-PATH: diagnostic.parser.data
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:1 data type name 'maybe' must start with an uppercase letter
;; TEST-USES-ATOM: atom.reader.error.reader.data.lowercase.type.name
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.data
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/typeclass-data-layout/atom.reader.error.reader.data.lowercase.type.name
;; TEST-MENU-PATH: codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.data.lowercase.type.name
;; TEST-ATOM-LEAF: atom.reader.error.reader.data.lowercase.type.name
;; TEST-CLI-TARGET: codegen errors reader typeclass-data-layout

(module Main)
(data maybe Nothing)
